# mealme

./: .env.example  .gitignore  .releaserc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  deny.toml  renovate.json
.github/: PULL_REQUEST_TEMPLATE.md
.spec/: data-folder-env-var.md  feather-icons.md  llm-import-meal-image.md  meal-images.md  planner-ui-improvements.md  planner-view-improvements.md  seed-meals-cli-subcommand.md
.sqlx/: query-087a0ed0d7e925f37dab9f38ccf194fbe84f5d37aab6ebd200227ef6e0caf872.json  query-29a79de3d31cd91255b75384c636bf3c77862c9ec6ad4c4403bae31f6d3217ea.json  query-306931a0bd8db2f8f6550f37e31fa26f4cb9cd584076c512e00a99145b8ea3ba.json  query-30d1f7b2e9d615e092f1b96e3989ec86af224e24109db3e28dcbf2aacc54d9fb.json  query-321cd346cd4c58055335e44101173a77de193345d82faa2ecea6e2b2b6491204.json  query-36b4a7e9e60bfcf55314b955e3530dfda2b43abdd683e79a43fbcaf45dfe9296.json  query-38d1db3434170e703b51e05bafde76032491d63bd1b6f6a8b618ca2e204242a6.json  query-48fd0bf77443e1eb8c823fe7f061071bbea712a8a66ade562126f8e21331e332.json  query-4a5ac2d74021f5e4a9ff22b32d7ea8dcb90ebafbb99086a01e24513211f0171b.json  query-4c5650900665711c9999d8db685c9e095e8dc58bec5aeb7b60ccc0b9a13e5f9a.json  query-5941200ab4cffb6d16b9445ce764c6fb69ae32ec9e120d4734938a5cb4a61f4a.json  query-67179720e3bd0d4224cc85886a976c8110a596da210aa61fca48a71a00a8d98a.json  query-6760d8589ef421c89887feabeaf7835d69cc9d38ab4d74d7eccb55c6633ff4eb.json  query-6e456ed97ca7f9ffee94ff51ae9eefd5ea27a24a4a62435228158f6ad239ae5f.json  (+11 more)
migrations/: 001_init.sql  (+2 more)
(+51 files in other folders)
